--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "keywords": ["df", "dfer.site"],
 	"require": {
 		"composer-plugin-api": "^1.0||^2.0",
-		"dfer/tools": "^1.0.0"
+		"dfer/tools": ">=1.0.0"
 	},
 	"require-dev": {
 		"composer/composer": "^1.0||^2.0"
